fix: 修复列表辅助线重叠问题 | Fixed list guides overlap issue.

--- a/style/module/block-list.less
+++ b/style/module/block-list.less
@@ -15,6 +15,10 @@
                 top: 0;
             }
 
+            &:nth-child(2)::before {
+                top: 30px !important;
+            }
+
             &.list {
                 /* 列表缩进(列表块) */
                 margin-left: 1em !important;
